turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:7: error: ')' expected but 'if' found.
		if (rule(i)=='R') {
                ^LangtonsAnt:12: error: ';' expected but 'if' found.
		if ( i == colors.length-1) {
                ^LangtonsAnt:33: error: expected start of definition
	override def run() { 
                 ^LangtonsAnt:46: error: Unmatched closing brace '}' ignored here
}
^